Fix overlapping border and add rgb to gradient class

--- a/assets/base.css
+++ b/assets/base.css
@@ -2528,6 +2528,7 @@ details-disclosure > details {
   border: var(--media-border-width) solid rgba(var(--color-foreground), var(--media-border-opacity));
   border-radius: var(--media-radius);
   overflow: visible !important;
+  background-color: rgb(var(--color-background));
 }
 
 .global-media-settings:after {
